--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-10-13 01:27+0200\n"
+"POT-Creation-Date: 2018-10-13 01:46+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -202,6 +202,10 @@ msgstr ""
 "programov sa snažíme zveľaďovať Python komunitu a formovať budúcnosť. "
 "Vzhľadom na to, že návody trvajú dlhšie a budú v menších miestnostiach, "
 "vyžadujú oveľa viac prípravy."
+
+#: templates/cfp.html:44
+msgid "Recording release"
+msgstr ""
 
 #: templates/coc.html:11
 msgid ""
@@ -662,6 +666,81 @@ msgstr ""
 "prihlásený/á, môžete sa odhlásiť kedykoľvek kliknutím na link na konci "
 "emailu."
 
+#: templates/recording.html:8
+msgid "PyCon SK Recording Release"
+msgstr ""
+
+#: templates/recording.html:11
+msgid ""
+"Part of the motivation for PyCon SK is to help with Python education and "
+"advocacy in Slovakia and around the world. Accordingly, we intend to "
+"record all PyCon SK presentations and live stream and release the "
+"recordings on the web — see the <a "
+"href=\"http://pyvideo.org\">http://pyvideo.org</a> for one such venue."
+msgstr ""
+
+#: templates/recording.html:15
+msgid ""
+"By submitting your talk or workshop proposal, or by signing up to give a "
+"lightning talk, you agree to give permission to the SPy o.z. to record, "
+"edit, and release audio and/or video of your presentation. We might also "
+"perform interviews with poster presenters or attendees and require "
+"recording releases to publish them."
+msgstr ""
+
+#: templates/recording.html:19
+msgid ""
+"By default, the recording release checkbox is checked when submitting a "
+"proposal. If you wish to opt-out, uncheck the release checkbox, note that"
+" no recordings or live stream of your talk will be made. You cannot opt "
+"out of recording for lightning talks."
+msgstr ""
+
+#: templates/recording.html:23
+msgid ""
+"You agree to the following legalese, which certifies that you are the "
+"author of your presentation (or otherwise allowed to present it at "
+"PyCon), and which allows the SPy o.z. 1) to perform the necessary audio "
+"and video editing needed to prepare your presentation, and 2) to "
+"distribute the recordings to other people, including on YouTube, or video"
+" sites. Released under CC-BY license. It also allows other people to "
+"watch the recordings."
+msgstr ""
+
+#: templates/recording.html:28
+msgid "Legalese"
+msgstr ""
+
+#: templates/recording.html:30
+msgid ""
+"I certify that I, the Submitter, am authorized to license this proposal "
+"and its associated presentation (the \"User Submission\") to the SPy o.z."
+" for use in association with PyCon SK 2019."
+msgstr ""
+
+#: templates/recording.html:34
+msgid "Specifically"
+msgstr ""
+
+#: templates/recording.html:37
+msgid ""
+"I, the Submitter, certify that I am the creator (and own the copyright) "
+"of the User Submission."
+msgstr ""
+
+#: templates/recording.html:38
+msgid ""
+"I, the Submitter, hereby grant the SPy o.z. to publish User Submission "
+"and its audio/video recordings under CC-BY license."
+msgstr ""
+
+#: templates/recording.html:39
+msgid ""
+"I, the Submitter, specifically affirm the right to perform the User "
+"Submissions on the SPy o.z. web sites or on other web sites designated by"
+" the PSF (including, but not necessarily limited to YouTube)."
+msgstr ""
+
 #: templates/sponsoring.html:8
 msgid "Why become a sponsor?"
 msgstr "Prečo sa stať sponzorom?"
@@ -987,4 +1066,3 @@ msgstr ""
 
 #~ msgid "Usually we wont send more than couple of emails per year."
 #~ msgstr "Zvyčajne neposielame viac ako pár emailov za rok."
-
