--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-02-19 08:01+0100\n"
+"POT-Creation-Date: 2019-02-20 12:26+0100\n"
 "PO-Revision-Date: 2018-11-27 22:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -3022,6 +3022,149 @@ msgstr ""
 "Tento tutorial a datasety sú dostupné na GitHube: "
 "https://github.com/MridulS/pydata-networkx"
 
+#: templates/speakers.html:792
+msgid "Software Designer and PyCon organizer"
+msgstr "Softvérový dizajnér a organizátor PyCon DE"
+
+#: templates/speakers.html:801
+msgid "Software Designer, PyCon DE organizer, Python Software Foundation Fellow"
+msgstr ""
+"Softvérový dizajnér, organizátor PyCon DE a člen nadácie Python Software "
+"Foundation"
+
+#: templates/speakers.html:805
+msgid "Let's talk about MLOps"
+msgstr ""
+
+#: templates/speakers.html:806
+msgid ""
+"The quantity of hype around machine learning and AI is probably second "
+"only to bitcoins and blockchains. But until a machine learning model is "
+"deployed to production the value delivered to companies is approximately "
+"equal to zero. Together with the common mantra that data science can't "
+"use agile/lean frameworks or that the best software engineering practises"
+" don't apply explains a lot about why often companies got burnt with "
+"their data science projects and why generally they under delivered."
+msgstr ""
+
+#: templates/speakers.html:813
+msgid ""
+"MLOps is here to help, the machine-learning equivalent of DevOps: it "
+"solves the problems of implementing machine-learning in production. "
+"During this talk I will introduce the data science lifecycle, the concept"
+" of machine learning Ops, its characteristics, why is extremely required,"
+" how it compares to DevOps, how it will become a required capabilities "
+"for any DS/ML/AI Team, tools available and how you can start with it."
+msgstr ""
+
+#: templates/speakers.html:837
+msgid "Web developer, DevOps, manager"
+msgstr "Web developer, DevOps, manažér"
+
+#: templates/speakers.html:846
+msgid ""
+"Remote/on-site/anything in between web developer with ~10 and Team Lead "
+"with ~3 years of experience. Responsible for everything from software "
+"architecture, team management, project planning, mentoring to straight "
+"down programming. In the last few years, I'm rediscovering my love for "
+"DevOps and finding a new mistress called *People management*."
+msgstr ""
+
+#: templates/speakers.html:854
+msgid "On the Edge of Leadership"
+msgstr ""
+
+#: templates/speakers.html:855
+msgid ""
+"How to lead a dev team with zero personal experience in people management"
+" while still having no idea how to manage even your own time. After "
+"several years of fairly regular software developer career path, I've "
+"found myself in a new role that I've unconsciously put myself into. Being"
+" a solid senior developer, management at the time agreed that I am a good"
+" candidate for the team lead. Being promoted to a new personal level of "
+"incompetence I felt lost and confused in my new role, but made a pact "
+"with myself to see this one through to the end. And so it came that for "
+"the past few years, I've been development team lead for several teams."
+msgstr ""
+
+#: templates/speakers.html:865
+msgid ""
+"With zero formal training, relying on my intuition and various random "
+"pieces of advice I picked up from people smarter than me I've more or "
+"less successfully lead my teams to their goals. On that path, I've "
+"learned tremendously, improved myself and hopefully, my teams. I would "
+"like to share what worked and what didn't, my emotions, my regrets, and "
+"my wins."
+msgstr ""
+
+#: templates/speakers.html:888
+msgid "Machine learning engineer"
+msgstr "Inžinier strojového učenia"
+
+#: templates/speakers.html:897
+msgid ""
+"Jorge Torres Is currently Co-founder & CTO of MindsDB and a visiting "
+"scholar at UC Berkeley researching machine learning automation and "
+"explainability. He has worked for a number of data-intensive start-ups, "
+"most recently working with Aneesh Chopra (the first CTO in the US "
+"government) building data systems that analyze billions of patients "
+"records and lead to highest savings for millions of patients, he started "
+"his work on scaling solutions using machine learning in early 2008 while "
+"working as first full time engineer at Couchsurfing where he helped grow "
+"the company from a few thousand users to a few million. Jorge had degrees"
+" in electrical engineering & computer science, including a masters degree"
+" in computer systems (with a focus on applied Machine Learning) from the "
+"Australian National University."
+msgstr ""
+
+#: templates/speakers.html:912
+msgid "Machine Learning Democratization"
+msgstr ""
+
+#: templates/speakers.html:913
+msgid ""
+"We can't expect Machine Learning experts to be both domain experts across"
+" various fields and also true experts in ML, it is crucial to rethink how"
+" we build tools so that we can provide Machine Learning capabilities to "
+"experts in various disciplines that are not necessarily savvy in machine "
+"learning, but are experts in their own domains, so that they can too "
+"become participants of the data science community."
+msgstr ""
+
+#: templates/speakers.html:919
+msgid "This talk is divided into three sections:"
+msgstr ""
+
+#: templates/speakers.html:920
+msgid ""
+"The first one, dives into the importance of democratizing Machine "
+"Learning, its objective is to demonstrate why now this is a crucial issue"
+" to be solved and to show the risks and problems that present themselves "
+"when Machine Learning Engineers take in the responsibility of building "
+"predictive technologies in domains that are not necessarily where they "
+"are the most experts on."
+msgstr ""
+
+#: templates/speakers.html:926
+msgid ""
+"The second part of this talk focuses on some solutions and approaches to "
+"challenges of democratizing Machine Learning, as well as the journey and "
+"results we have seen at MindsDB while at this endeavor as well as what "
+"would be new ways that the ML community can think of the next generation "
+"of tools being built."
+msgstr ""
+
+#: templates/speakers.html:931
+msgid ""
+"The third and most extensive section of this talk, focuses on the new "
+"issues that are born once machine Learning capabilities are on the hands "
+"of not ML experts, more importantly, the implications of delegating the "
+"Machine Learning machinery to a system, and what is important in order to"
+" trust those systems. Which leads to the importance in further developing"
+" our understanding of explainability, interpretability, and robustness of"
+" ML."
+msgstr ""
+
 #: templates/sponsoring.html:8 templates/sponsoring.html:18
 msgid "Sponsors &amp; Partners"
 msgstr "Sponzori a partneri"
@@ -3132,8 +3275,8 @@ msgstr ""
 "V JetBrains, kód je potešenie. Už viac ako 15 rokov robíme maximum pre "
 "to, aby sme vytvorili najlepšie, najefektívnejšie developerské nástroje "
 "na svete. Automatizáciou rutinných kontrol a korekcií naše nástroje "
-"zvyšujú produktivitu a dávajú tak priestor developerom rásť, objavovať "
-"a tvoriť."
+"zvyšujú produktivitu a dávajú tak priestor developerom rásť, objavovať a "
+"tvoriť."
 
 #: templates/sponsoring.html:133
 msgid "Media Partners"
