--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-02-20 23:50+0100\n"
+"POT-Creation-Date: 2019-02-21 21:27+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1504,7 +1504,7 @@ msgstr ""
 msgid "Python loving research assistant"
 msgstr ""
 
-#: templates/index.html:573 templates/speakers.html:926
+#: templates/index.html:571 templates/speakers.html:926
 msgid "Web developer, DevOps, manager"
 msgstr ""
 
@@ -1512,8 +1512,20 @@ msgstr ""
 msgid "Machine learning engineer"
 msgstr ""
 
-#: templates/index.html:595 templates/speakers.html:1046
+#: templates/index.html:594 templates/speakers.html:1046
 msgid "UX designer and marketing specialist"
+msgstr ""
+
+#: templates/index.html:604 templates/speakers.html:1090
+msgid "Senior Python Developer and Tester"
+msgstr ""
+
+#: templates/index.html:617 templates/speakers.html:1128
+msgid "Passionate cloud technology and ML developer"
+msgstr ""
+
+#: templates/index.html:627 templates/speakers.html:1175
+msgid "Software developer and blockchain expert"
 msgstr ""
 
 #: templates/job-fair.html:8
@@ -2388,7 +2400,7 @@ msgid ""
 "astrophysics, he has always been in the industry. As a technical "
 "evangelist with Auth0, he meets with developers to help them make the web"
 " a safer place. During his free time, he is usually found stargazing in a"
-" campsite somewhereor brewing a fresh batch of beer in his garage."
+" campsite somewhere or brewing a fresh batch of beer in his garage."
 msgstr ""
 
 #: templates/speakers.html:617
@@ -2398,9 +2410,9 @@ msgstr ""
 #: templates/speakers.html:618
 msgid ""
 "Remember when setting up a login page was easy? It seems like nowadays it"
-" can take weeks to start a project--creating a signup form, a login form,"
-" a password recovery screen, and all the validation in between. And you "
-"haven’t even started on security considerations yet. During this "
+" can take weeks to start a project -- creating a signup form, a login "
+"form, a password recovery screen, and all the validation in between. And "
+"you haven't even started on security considerations yet. During this "
 "presentation, the attendees will be introduced to OpenID Connect and "
 "OAuth. They will also learn how to leverage these technologies to create "
 "more secure applications. Most importantly, they will learn how to "
@@ -2410,7 +2422,7 @@ msgstr ""
 
 #: templates/speakers.html:628
 msgid ""
-"Besides this talk Joel is plannig a workshop on building a passwordless "
+"Besides this talk Joel is planning a workshop on building a passwordless "
 "authentication server."
 msgstr ""
 
@@ -2745,6 +2757,107 @@ msgid ""
 "uživatelská rozhraní s cílem jít svým uživatelům naproti, tedy aby "
 "uživatelé museli dělat pouze nezbytné kroky s vynaložením co nejmenšího "
 "úsilí."
+msgstr ""
+
+#: templates/speakers.html:1099
+msgid ""
+"Senior Python developer and tester at Pantheon Technologies focused on "
+"visualization and presentation of the test results."
+msgstr ""
+
+#: templates/speakers.html:1104
+msgid "Automated visualization and presentation of tests results"
+msgstr ""
+
+#: templates/speakers.html:1105
+msgid ""
+"Thousands of performance tests run by tens of Jenkins jobs generate "
+"gigabytes of data. It is not an easy task to provide it to our audience. "
+"But we do our best. Data visualization is not only coding in Python, it "
+"is above all finding the best way how to transform well structured but "
+"boring xml files to fancy and informative graphs and tables. They must be"
+" beautiful, gratifying, logical and functional like any good design "
+"and/or architecture."
+msgstr ""
+
+#: templates/speakers.html:1137
+msgid ""
+"Laurent is a developer passionate about software, hardware, science, and "
+"anything shaping the future. He works for Google where he ecstatically "
+"explores cloud technologies. In a previous life, he pioneered the ebook "
+"industry, co-created the first European ebook reader, and co-founded "
+"Bookeen. He now enjoys sharing his passion in international conferences. "
+"You can find him on Twitter at @PicardParis."
+msgstr ""
+
+#: templates/speakers.html:1146
+msgid "Building smarter solutions with Machine Learning, from magic to reality"
+msgstr ""
+
+#: templates/speakers.html:1147
+msgid ""
+"“Any sufficiently advanced technology is indistinguishable from magic.” "
+"Well, Machine Learning can look like magic, but you don't need to be a "
+"data scientist or an ML researcher to develop with ML."
+msgstr ""
+
+#: templates/speakers.html:1150
+msgid ""
+"So, what about making your solution smarter without any knowledge in AI? "
+"With pre-trained models and a few lines of code, Machine Learning APIs "
+"can analyze your data. Moreover, AutoML techniques can now help in "
+"getting even more specific insights tailored to your needs."
+msgstr ""
+
+#: templates/speakers.html:1154
+msgid ""
+"In this session, you'll see how to transform or extract information from "
+"text, image, audio & video with the latest ML APIs, how to train an "
+"AutoML custom model, and you'll be an active player of a live demo. Don't"
+" put your smartphone in airplane mode!"
+msgstr ""
+
+#: templates/speakers.html:1184
+msgid ""
+"I'm a Vienna based software developer and blockchain expert. With an "
+"academic background in the social sciences I have always been a "
+"programmer. Starting out as a self-taught programming enthusiast at age "
+"fifteen I built games and played with fun scripts until eventually I went"
+" on to become a software developer by profession. Built the blockchain "
+"interacting infrastructure in a fast growing start-up which I recently "
+"quit to start again in an early stage start-up which aims to bring "
+"industry data to the blockchain. Over my 15 years of writing code I have "
+"always been enthralled by the idea of open source and contributed to a "
+"number of projects."
+msgstr ""
+
+#: templates/speakers.html:1196
+msgid "Intro to Blockchain with Python"
+msgstr ""
+
+#: templates/speakers.html:1197
+msgid "This talk is structured into two parts of approximately equal length: "
+msgstr ""
+
+#: templates/speakers.html:1198
+msgid ""
+"First an introduction to blockchains in general. Most have heard about "
+"blockchains or bitcoin but how does it actually work and what is the "
+"technology driving it? This talk will explain what a cryptocurrency "
+"wallet is, how transactions are created and how they are brought together"
+" to form blocks that build the blockchain. I will outline differences "
+"between the most widely used implementations and the core technological "
+"concepts behind them, like Proof-of-Work versus Proof-of-Stake, consensus"
+" algorithms, trustless systems and the ideas behind them."
+msgstr ""
+
+#: templates/speakers.html:1206
+msgid ""
+"In the second half of the talk I draw on my experience working with "
+"python in my professional career and give an overview of the python "
+"ecosystem for blockhain and cryptocurrency development. I will showcase "
+"some of the libraries and tools that exist, like btcpy and highlight some"
+" of the pros and cons (mostly pros) of using python in this sector."
 msgstr ""
 
 #: templates/sponsoring.html:8 templates/sponsoring.html:18
