--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-02-21 17:27+0100\n"
+"POT-Creation-Date: 2019-02-21 21:27+0100\n"
 "PO-Revision-Date: 2018-11-27 22:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -223,6 +223,8 @@ msgid ""
 "We have received almost 150 high quality talk and workshop proposals, "
 "thanks everyone for participation."
 msgstr ""
+"Dostali sme takmer 150 veľmi kvalitných návrhov na prednášky a workshopy, "
+"ďakujeme všetkým za účasť."
 
 #: templates/cfp.html:42
 msgid "Give us a tip"
@@ -1463,6 +1465,339 @@ msgstr ""
 "NIE. NA SOBOTNÚ konferenčnú večeru (oficiálny spoločenský event) si musíš"
 " kúpiť lístok. Vstupenka na večeru zahŕňa večeru formou bufetu a welcome "
 "drink. Ďalšie drinky si platí každý sám."
+
+#: templates/index.html:20
+msgid "<span>Be a part of </span>PyCon SK 2019"
+msgstr "<span>Buď súčasťou </span>PyConu SK 2019"
+
+#: templates/index.html:22
+msgid "22-24 March"
+msgstr "22.-24. marec"
+
+#: templates/index.html:37
+msgid "Days"
+msgstr "dní"
+
+#: templates/index.html:41
+msgid "Hours"
+msgstr "hodín"
+
+#: templates/index.html:45
+msgid "Minutes"
+msgstr "minút"
+
+#: templates/index.html:49
+msgid "Seconds"
+msgstr "sekúnd"
+
+#: templates/index.html:66 templates/venue.html:45
+msgid ""
+"<strong>Fourth year</strong> will happen <strong>22-24th March, 2019 in "
+"Bratislava</strong>."
+msgstr ""
+"Hostiteľom <strong>štvrtého ročníka</strong> bude opäť "
+"<strong>Bratislava, 22.-24. Marec 2019</strong>."
+
+#: templates/index.html:69
+msgid ""
+"The PyCon SK 2019 conference, which will take place in Bratislava, is the"
+" annual gathering for the community using and developing the open-source "
+"Python programming language. It is organized by the volunteers from the "
+"SPy o.z., civic association dedicated to advancing and promoting Python "
+"and other Open Source technologies and ideas. Through PyCon, the SPy o.z."
+" advances its mission of growing the Slovak (and also international) "
+"community of Python programmers and Open Source supporters."
+msgstr ""
+"Konferencia PyCon SK 2019, ktorá sa bude konať v Bratislave je každoročné"
+" stretnutie komunity využívajúcej a vyvíjajúcej otvorený programovací jazyk "
+"Python. Je organizovaná dobrovoľníkmi z občianskeho združenia  SPy o.z., "
+"ktorého hlavným cieľom je šíriť povedomie o Pythone a ďalších otvorených "
+"technológiách. Prostredníctvom PyConu SPy, o.z. plní svoj cieľ - "
+"rozširovať slovenskú (a medzinárodnú) komunitu programátorov v Pythone "
+"a podporovateľov Open Source."
+
+#: templates/index.html:72
+msgid ""
+"Because PyCon SK is backed by the non-profit SPy, we keep registration "
+"costs much lower than comparable technology conferences (or other "
+"conferences in neighbor countries) so that PyCon remains accessible to "
+"the widest group possible."
+msgstr ""
+"Pretože PyCon SK je organizovaný neziskovou organizáciou SPy, naše "
+"registračné poplatky sú výrazne nižšie ako na porovnateľné technologické "
+"konferencie (alebo na konferencie v okolitých krajinách), vďaka čomu je "
+"PyCon dostupný širokej skupine ľudí."
+
+#: templates/index.html:75
+msgid ""
+"PyCon SK is a diverse conference dedicated to providing an enjoyable "
+"experience to everyone. Help us do this by following our "
+msgstr ""
+"PyCon SK je pestrá konferencia zameraná na to, aby poskytla príjemný "
+"zážitok pre všetkých návštevníkov. Aby sme toto splnili, prosím dodržuj náš "
+
+#: templates/index.html:76
+msgid "code of conduct"
+msgstr "kódex správania"
+
+#: templates/index.html:88
+msgid "Great Speakers"
+msgstr "Skvelí rečníci"
+
+#: templates/index.html:96
+msgid "Networking"
+msgstr "Networking"
+
+#: templates/index.html:104
+msgid "Have Fun"
+msgstr "Zábava"
+
+#: templates/index.html:114
+msgid "Respected industry leaders with future-tech talks."
+msgstr "Rešpektované osobnosti hovoriace o technológiách budúcnosti"
+
+#: templates/index.html:115
+msgid ""
+"Apart from well recognized community members we also invite first time "
+"speakers to submit a talk."
+msgstr ""
+"Okrem známych členov komunity radi privítame aj návrhy prednášok od "
+"spíkrov, ktorí budú vystupovať po prvýkrát."
+
+#: templates/index.html:116
+msgid ""
+"If you've done something that you think other people might be interested "
+"in, or that you think they should know about, please do consider telling "
+"us about it."
+msgstr ""
+"Ak si spravil/a niečo, čo by mohlo zaujímať aj iných, alebo si myslíš, "
+"že ostatní by o tom mali vedieť, príď nám o tom porozprávať."
+
+#: templates/index.html:127
+msgid "Great opportunity to network"
+msgstr "Skvelá príležitosť na nové kontakty"
+
+#: templates/index.html:128
+msgid ""
+"PyCon is organized by the Python community and for the Python community. "
+"Joining the event makes you part of the community."
+msgstr ""
+"PyCon je organizovaný Python komunitou pre Python komunitu. Zapojením sa "
+"do podujatia sa stávaš súčasťou komunity."
+
+#: templates/index.html:129
+msgid "People at PyCon SK are very nice, so come and make new friends."
+msgstr "Ľudia na Pycone sú veľmi milí, tak príď a spoznaj nových priateľov."
+
+#: templates/index.html:130
+msgid ""
+"Besides great people you can meet interesting hi-tech companies to "
+"discuss job or business opportunities."
+msgstr ""
+"Okrem skvelých ľudí tu môžeš stretnúť hi-tech spoločnosti a prediskutovať "
+"s nimi pracovné príležitosti aleboo biznis."
+
+#: templates/index.html:133 templates/index.html:146
+msgid "Buy ticket"
+msgstr "Kúp si lístok"
+
+#: templates/index.html:141
+msgid "Food and drinks are provided for all attendees."
+msgstr "Strava a nápoje sú k dispozícii pre všetkých účastníkov."
+
+#: templates/index.html:142
+msgid ""
+"On Friday we will have an unofficial party. We meet in a pub talk and "
+"have fun. Everybody at their own expense."
+msgstr ""
+"V piatok budeme mať neoficiálnu párty. Stretneme sa v pube, pokecáme a "
+"zabavíme sa. Každý na vlastný účet."
+
+#: templates/index.html:143
+msgid ""
+"On Saturday we will have an official dinner. We meet in a pub talk and "
+"have fun again :D Most of the volunteers and speakers join this party, "
+"but for this one you will need a separate ticket."
+msgstr ""
+"V sobotu budeme mať oficiálnu večeru. Opäť sa stretnem v pube, pokecáme"
+" a zabavíme sa. Na túto udalosť však budeš potrebovať samostatný lístok."
+
+#: templates/index.html:166 templates/tickets.html:45
+msgid "Participants"
+msgstr "Účastníkov"
+
+#: templates/index.html:186 templates/tickets.html:65
+msgid "Sessions"
+msgstr "Prednášok"
+
+#: templates/index.html:196 templates/tickets.html:75
+msgid "Sponsors"
+msgstr "Sponzorov"
+
+#: templates/index.html:211
+msgid "News"
+msgstr "Novinky"
+
+#: templates/index.html:221
+msgid ""
+"We'll review the proposals as soon as possible and publish all of the "
+"speakers."
+msgstr ""
+"Naša odborná komisia zhodnotí všetky návrhy na prednášky a hneď, ako to "
+"bude možné, zverejníme spíkrov."
+
+#: templates/index.html:231
+msgid "PyCon SK 2019 speakers and website redesign."
+msgstr "Spíkri na PyCon SK 2019 a redizajn webstránky."
+
+#: templates/index.html:235
+msgid "It is our privilege to announce first three speakers at PyCon SK 2019:"
+msgstr "Je nám cťou ohlásiť prvých troch spíkrov na PyCon SK 2019:"
+
+#: templates/index.html:235
+msgid ""
+"Helen Li from Google, prof. Juraj Hromkovič from ETH Zürich and Honza "
+"Král from Elastic."
+msgstr ""
+"Helen Li z Google, prof. Juraj Hromkovič z ETH Zürich a Honza Král z "
+"Elasticu."
+
+msgid ""
+"We have also launched new design of the conference website. How do you "
+"like it? Let us know on our social networks."
+msgstr ""
+"Spustili sme nový dizajn konferenčnej web stránky. Ako sa ti páči? Daj "
+"nám vedieť na sociálnych sieťach."
+
+#: templates/index.html:247
+msgid "PyCon SK 2019 Slack channel & Social media"
+msgstr "PyCon SK 2019 Slack kanál & sociálne médiá"
+
+#: templates/index.html:251
+msgid "Join us at our social media:"
+msgstr "Pridaj sa k nám na sociálnych sieťach:"
+
+#: templates/index.html:283
+msgid "Conference ticket sale is open."
+msgstr "Predaj lístkov na konferenciu je otvorený."
+
+#: templates/index.html:287 templates/tickets.html:23
+msgid ""
+"Buy your ticket before they are gone... So far every PyCon SK has been "
+"sold out!"
+msgstr "Kúp si lístok skôr, ako sa vypredá... Zatiaľ sa vypredal každý PyCon SK!"
+
+#: templates/index.html:302
+msgid ""
+"Submit your talk proposal with short abstract and your bio. All selected "
+"speakers get a complimentary ticket to the conference."
+msgstr ""
+"Pošli nám svoj návrh aj so stručným obsahom a životopisom. Všetci rečníci "
+"majú vstup na konferenciu zadarmo."
+
+#: templates/index.html:316
+msgid "Awesome Speakers"
+msgstr "Úžasní rečníci"
+
+#: templates/index.html:317
+msgid "Listen, Learn, Get inspired."
+msgstr "Počúvaj, uč sa a inšpiruj sa"
+
+#: templates/index.html:339 templates/speakers.html:65
+msgid "senior software engineer with Google AI Genomics"
+msgstr "senior softvér vývojárka v Google AI Genomics"
+
+#: templates/index.html:350 templates/speakers.html:31
+msgid "Python engineer at Elastic"
+msgstr "Python vývojár v Elastic"
+
+#: templates/index.html:364 templates/speakers.html:132
+msgid "Back-end and infrastructure engineer at Crate.io, Django core contributor"
+msgstr "Technik backendu a infraštruktúry v Crate.io, Django core prispievateľ"
+
+#: templates/index.html:385 templates/speakers.html:197
+msgid "Python engineer at Iceye"
+msgstr "Python vývojár v Iceye"
+
+#: templates/index.html:398 templates/speakers.html:231
+msgid "Creator of Anvil"
+msgstr "Tvorca Anvilu"
+
+#: templates/index.html:409 templates/speakers.html:272
+msgid "Python developer at Anvil"
+msgstr "Python vývojár v Anvile"
+
+#: templates/index.html:419
+msgid "Security Engineer"
+msgstr "Bezpečnostný inžinier"
+
+#: templates/index.html:432 templates/speakers.html:358
+msgid "Independent contractor and tester of edu app"
+msgstr "Nezávislá konktraktorka a testerka vzdelávacej appky"
+
+#: templates/index.html:442
+msgid "Tech Lead at Kiwi.com"
+msgstr "Vedúci technológií v kiwi.com"
+
+#: templates/index.html:452 templates/speakers.html:448
+msgid "Cloud technology enthusiast"
+msgstr "Nadšenec cloudových technológií"
+
+#: templates/index.html:465
+msgid "Senior Software Architect"
+msgstr "Senior softvérový architekt"
+
+#: templates/index.html:475
+msgid "Software Engineer"
+msgstr "Softvérový inžinier"
+
+#: templates/index.html:485 templates/speakers.html:596
+msgid "Python enthusiast and security evangelist"
+msgstr "Python nadšenec a bezpečnostný evanjelista"
+
+#: templates/index.html:498 templates/speakers.html:647
+msgid "Odoo evangelist in IMPLEMENTO"
+msgstr "Odoo evanjelista v IMPLEMENTO"
+
+#: templates/index.html:508 templates/speakers.html:689
+msgid "Chief Innovation Officer"
+msgstr "Splnomocnenkyňa pre inovácie"
+
+#: templates/index.html:518 templates/speakers.html:730
+msgid "Data Scientist"
+msgstr "Data Scientist"
+
+#: templates/index.html:531
+msgid "Software Engineer and FOSS maintainer"
+msgstr "Softvérový inžinier a prispievateľ do Open Source softvéru"
+
+#: templates/index.html:541 templates/speakers.html:830
+msgid "Python loving research assistant"
+msgstr "Asistent výskumu"
+
+#: templates/index.html:571 templates/speakers.html:926
+msgid "Web developer, DevOps, manager"
+msgstr "Web developer, DevOps, manažér"
+
+#: templates/index.html:584 templates/speakers.html:978
+msgid "Machine learning engineer"
+msgstr "Inžinier strojového učenia"
+
+#: templates/index.html:594 templates/speakers.html:1046
+msgid "UX designer and marketing specialist"
+msgstr "UX dizajnérka a marketingová špecialistka"
+
+#: templates/index.html:604 templates/speakers.html:1090
+msgid "Senior Python Developer and Tester"
+msgstr "Senior Python developer a tester"
+
+#: templates/index.html:617 templates/speakers.html:1128
+msgid "Passionate cloud technology and ML developer"
+msgstr "Nadšený developer cloudových technológií a strojového učenia"
+
+#: templates/index.html:627 templates/speakers.html:1175
+msgid "Software developer and blockchain expert"
+msgstr "Softvérový developer a expert na blockchain"
 
 #: templates/job-fair.html:8
 msgid "Job fair"
@@ -2852,6 +3187,11 @@ msgid ""
 "down programming. In the last few years, I'm rediscovering my love for "
 "DevOps and finding a new mistress called *People management*."
 msgstr ""
+"Vzdialený/lokálny/čokoľvek-medzi-tým web developer s ~10- a Team Lead "
+"s ~3-ročnými skúsenosťami. Zodpovedný za všetko od softvérovej "
+"architektúry, team manažment, plánovanie projektov, mentoring až po "
+"prachobyčajné programovanie. V posledných rokoch znovaobjavujem svoju "
+"lásku k DevOps a našiel som si milenku s menom *Manažment ľudí*."
 
 #: templates/speakers.html:943
 msgid "On the Edge of Leadership"
@@ -2899,6 +3239,18 @@ msgid ""
 " in computer systems (with a focus on applied Machine Learning) from the "
 "Australian National University."
 msgstr ""
+"Jorge Torres je momentálne spoluzakladateľ a CTO MindsDB a hosťujúcim "
+"učiteľom na UC Berkeley v oblasti automatizácie strojového učenia a "
+"vysvetliteľnosti. Pracoval v množstve dátovo intenzívnych start-upoch, "
+"naposledy spolupracoval s Aneeshom Choprom (prvý CTO vo vláde USA) "
+"na budovaní dátových systémov, ktoré analyzovali miliardy záznamov "
+"pacientov a viedli k maximálnym úsporám pre milióny pacientov. Svoju "
+"prácu na škálovateľných riešeniach použitím strojového učenia začal "
+"už v roku 2008 vo svojej prvej full time práci pre Couchsurfing, kde "
+"pomáhal spoločnosti vyrásť z niekoľko tisíc užívateľov na niekoľko "
+"miliónov. Jorge má tituly z elektrického inžinierstva a počítačových vied, "
+"vrátane magisterského titulu z počítačových systémov so zameraním na "
+"strojové učenie z Austrálskej Národnej Univerzity."
 
 #: templates/speakers.html:1002
 msgid "Machine Learning Democratization"
@@ -3026,12 +3378,13 @@ msgid ""
 "Bookeen. He now enjoys sharing his passion in international conferences. "
 "You can find him on Twitter at @PicardParis."
 msgstr ""
-"Laurent je developer so záujmom o softvér, hardvér, vedu a čokoľvek, "
-"čo formuje budúcnosť. Pracuje pre Google, kde neúnavne skúma možnosti "
-"cloudových technológií. V predchádzajúcom živote sa podieľal na vtedy mladom "
-"ebook priemysle, spoluvytvoril prvú európsku čítačku elektronických kníh "
-"a spoluzakladal Bookeen. Dnes rád zdieľa svoje vášne na medzinárodných "
-"konferenciách. Nájsť ho môžete na Twitteri ako @PicardParis."
+"Laurent je developer so záujmom o softvér, hardvér, vedu a čokoľvek, čo "
+"formuje budúcnosť. Pracuje pre Google, kde neúnavne skúma možnosti "
+"cloudových technológií. V predchádzajúcom živote sa podieľal na vtedy "
+"mladom ebook priemysle, spoluvytvoril prvú európsku čítačku "
+"elektronických kníh a spoluzakladal Bookeen. Dnes rád zdieľa svoje vášne "
+"na medzinárodných konferenciách. Nájsť ho môžete na Twitteri ako "
+"@PicardParis."
 
 #: templates/speakers.html:1146
 msgid "Building smarter solutions with Machine Learning, from magic to reality"
@@ -3077,15 +3430,15 @@ msgid ""
 "always been enthralled by the idea of open source and contributed to a "
 "number of projects."
 msgstr ""
-"Som developer a expert na blockchain z Viedne. Vždy som bol programátor "
-"s akademickým backgroundom v oblasti sociálnych vied. Začínal som ako "
-"samouk-nadšenec vo veku 15 rokov tvorením hier a zabávaním sa so skriptami, "
-"až kým som sa nakoniec nestal profesionálnym developerom softvéru. "
-"Vybudoval som interagujúcu blockchainov infraštruktúru v rýchlo rastúcom "
-"start-upe, ktorý som nedávno opustil, aby som začal znova v začínajúcom "
-"start-upe, ktorý sa zameriava na využitie priemyselných dát v blockchaine. "
-"Za 15 rokov písania kódu som bol vždy nadšený myšlienkou open sourcu "
-"a prispieval som do mnohých projektov."
+"Som developer a expert na blockchain z Viedne. Vždy som bol programátor s"
+" akademickým backgroundom v oblasti sociálnych vied. Začínal som ako "
+"samouk-nadšenec vo veku 15 rokov tvorením hier a zabávaním sa so "
+"skriptami, až kým som sa nakoniec nestal profesionálnym developerom "
+"softvéru. Vybudoval som interagujúcu blockchainov infraštruktúru v rýchlo"
+" rastúcom start-upe, ktorý som nedávno opustil, aby som začal znova v "
+"začínajúcom start-upe, ktorý sa zameriava na využitie priemyselných dát v"
+" blockchaine. Za 15 rokov písania kódu som bol vždy nadšený myšlienkou "
+"open sourcu a prispieval som do mnohých projektov."
 
 #: templates/speakers.html:1196
 msgid "Intro to Blockchain with Python"
